Have fixed swipes on mobile!

--- a/public/components/Feed/Feed.css
+++ b/public/components/Feed/Feed.css
@@ -224,3 +224,8 @@
     display: inline-block;
     position: absolute;
 }
+
+.like-swipe {
+    height: 3vh;
+    margin: 1vh;
+}
